--- a/ping.css
+++ b/ping.css
@@ -111,8 +111,16 @@ footer {
 }
 
 @media only screen and (max-width: 450px) {
+    input[type="email"]{
+        width: 70%;
+    }
+
     input[type="submit"] {
         margin-top: 10px;
         width: 70%;
+    }
+
+    .ill{
+        width: 90%;
     }
 }
